--- a/App/Views/Home/index.html
+++ b/App/Views/Home/index.html
@@ -1,9 +1,12 @@
-{% extends "base.html" %}
+{% extends "base.html" %} {% block title %}Home{% endblock %} {% block body %}
 
-{% block title %}Home{% endblock %}
+<h1>Welcome</h1>
 
-{% block body %}
+{{userID}} {{userName}}
+{{SUCCESS_MESSAGE}}
+{% if userID %}
 
-    <h1>Welcome</h1>
-
-{% endblock %}
+<a href="/logout">Logout</a>
+{% else %}
+<a href="/login">Login</a> <br />
+{% endif %} {% endblock %}
