--- a/App/Views/Auth/login.html
+++ b/App/Views/Auth/login.html
@@ -1,24 +1,31 @@
 {% extends "base.html" %} {% block title %}Login{% endblock %} {% block body %}
 
 <h1>login</h1>
-<form class="white">
+<form class="white" method="post">
   <h5 class="grey-text text-darken-0">Sign In</h5>
   <div class="input-field">
     <label for="email">Email</label
     ><input
       type="email"
+      name="email"
       id="email"
-      required=""
       value="nikkyamresh8@gmail.com"
+      required
     />
   </div>
   <div class="input-field">
     <label for="password">Password</label
-    ><input type="password" id="password" required="" value="123456" />
+    ><input
+      type="password"
+      id="password"
+      value="test"
+      name="password"
+      required
+    />
   </div>
   <div class="input-field">
     <button class="btn bg-orange lighten-1 z-depth-0">Login</button>
-    <div class="center red-text"></div>
+    <div class="center red-text">{{ERROR_MESSAGE}}</div>
   </div>
 </form>
 
