--- a/App/Views/Admin/Auth/login.html
+++ b/App/Views/Admin/Auth/login.html
@@ -1,8 +1,6 @@
 {% extends "base.html" %} {% block title %}Login{% endblock %} {% block body %}
-
-<h1>login</h1>
 <form class="white" method="post">
-  <h5 class="grey-text text-darken-0">Sign In</h5>
+  <h5 class="grey-text text-darken-0">Admin Login</h5>
   <div class="input-field">
     <label for="email">Email</label
     ><input
