--- a/App/Views/Admin/Dashboard/index.html
+++ b/App/Views/Admin/Dashboard/index.html
@@ -3,6 +3,7 @@ block body %}
 <h1>Welcome Admin</h1>
 
 <a href="/admin/department">Department Managementt</a> <br /><br />
+<a href="/admin/teacher">Teachers Managementt</a> <br /><br />
 <a href="/logout">Logout</a>
 
 {% endblock %}
