--- a/App/Views/base.html
+++ b/App/Views/base.html
@@ -12,6 +12,7 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Teko:wght@300;400;500;600;700&display=swap"
     />
+    <link rel="stylesheet" href="styles/style.css" />
     <link
       rel="stylesheet"
       type="text/css"
