--- a/App/Views/Admin/Dashboard/Department/index.html
+++ b/App/Views/Admin/Dashboard/Department/index.html
@@ -2,7 +2,7 @@
 block body %}
 <h1>Departments</h1>
 {% for dept in department%}
- {{dept.id}} ({{dept.name}}) 
+ {{dept.id}} ({{dept.name}}) - HOD [{{dept.hod}}]
 <a class="btn bg-red" href="/admin/department/{{dept.id}}">Edit</a>
 <a class="btn bg-red" href="/admin/deleteDepartment/{{dept.id}}">Delete</a>
  <br />
