--- a/App/Views/Admin/Dashboard/index.html
+++ b/App/Views/Admin/Dashboard/index.html
@@ -4,6 +4,7 @@ block body %}
 
 <a href="/admin/department">Department Managementt</a> <br /><br />
 <a href="/admin/teacher">Teachers Managementt</a> <br /><br />
+<a href="/admin/batches">Batches Management</a> <br /><br />
 <a href="/logout">Logout</a>
 
 {% endblock %}
