--- a/App/Views/Admin/Dashboard/index.html
+++ b/App/Views/Admin/Dashboard/index.html
@@ -6,6 +6,7 @@ block body %}
 <a href="/admin/teacher">Teachers Managementt</a> <br /><br />
 <a href="/admin/batches">Batches Management</a> <br /><br />
 <a href="/admin/course">Course Management</a> <br /><br />
+<a href="/admin/branch">Branch Management</a> <br /><br />
 <a href="/logout">Logout</a>
 
 {% endblock %}
