--- a/App/Views/Admin/Dashboard/Batch/index.html
+++ b/App/Views/Admin/Dashboard/Batch/index.html
@@ -31,5 +31,5 @@
   <button class="btn bg-orange lighten-1 z-depth-0">create</button>
 </form>
 <br />
-<a href="/admin/department">Back to list</a>
+<a href="/admin">Back to list</a>
 {% endblock %}
