--- a/App/Views/Admin/Dashboard/index.html
+++ b/App/Views/Admin/Dashboard/index.html
@@ -7,6 +7,7 @@ block body %}
 <a href="/admin/batch">Batches Management</a> <br /><br />
 <a href="/admin/course">Course Management</a> <br /><br />
 <a href="/admin/branch">Branch Management</a> <br /><br />
+<a href="/admin/semester">Semester Management</a> <br /><br />
 <a href="/logout">Logout</a>
 
 {% endblock %}
