--- a/App/Views/Admin/Dashboard/index.html
+++ b/App/Views/Admin/Dashboard/index.html
@@ -8,6 +8,7 @@ block body %}
 <a href="/admin/course">Course Management</a> <br /><br />
 <a href="/admin/branch">Branch Management</a> <br /><br />
 <a href="/admin/semester">Semester Management</a> <br /><br />
+<a href="/admin/classes">Classes Management</a> <br /><br />
 <a href="/logout">Logout</a>
 
 {% endblock %}
