--- a/App/Views/Admin/Dashboard/index.html
+++ b/App/Views/Admin/Dashboard/index.html
@@ -10,6 +10,7 @@ block body %}
 <a href="/admin/semester">Semester Management</a> <br /><br />
 <a href="/admin/classes">Classes Management</a> <br /><br />
 <a href="/admin/student">Student Management</a> <br /><br />
+<a href="/admin/subject">Subject Management</a> <br /><br />
 <a href="/logout">Logout</a>
 
 {% endblock %}
