--- a/App/Views/Admin/Dashboard/Periods/edit.html
+++ b/App/Views/Admin/Dashboard/Periods/edit.html
@@ -18,6 +18,15 @@ block body %}
         <label for="toTime">To</label>
         <input type="time" id="appt" name="toTime" min="09:00" max="18:00" required>
     </div>
+    <h5>Day</h5>
+    <div class="input-field col s12">
+        <select name="day" class="browser-default" id="hod">
+            {% for day in days %}
+            <option {% if periods.day==day %}selected="selected" {% endif %} value="{{day}}">{{day}}</option>
+            {% endfor %}
+        </select>
+        <br />
+    </div>
     <h5>Subject</h5>
     <div class="input-field col s12">
         <select name="subject" class="browser-default" id="hod">
