--- a/App/Views/Admin/Dashboard/index.html
+++ b/App/Views/Admin/Dashboard/index.html
@@ -11,7 +11,7 @@ block body %}
 <a href="/admin/classes">Classes Management</a> <br /><br />
 <a href="/admin/student">Student Management</a> <br /><br />
 <a href="/admin/subject">Subject Management</a> <br /><br />
-<a href="/admin/periods">Periods Management</a> <br /><br />
+<a href="/admin/period">Periods Management</a> <br /><br />
 <a href="/logout">Logout</a>
 
 {% endblock %}
