--- a/App/Views/Admin/Dashboard/Period/edit.html
+++ b/App/Views/Admin/Dashboard/Period/edit.html
@@ -38,7 +38,7 @@ block body %}
 
     <h5>Class id</h5>
     <div class="input-field col s12">
-        <select name="teacher" class="browser-default" id="hod">
+        <select name="class" class="browser-default" id="hod">
             {% for class in classes %}
             <option {% if class.id==periods.classID %}selected="selected" {% endif %} value="{{class.id}}">{{class.id}}
             </option>
@@ -48,7 +48,7 @@ block body %}
     </div>
     <h5>Teacher</h5>
     <div class="input-field col s12">
-        <select name="subject" class="browser-default" id="hod">
+        <select name="teacher" class="browser-default" id="hod">
             {% for teacher in teachers %}
             <option {% if teacher.userID==periods.teacherID %}selected="selected" {% endif %}
                 value="{{teacher.userID}}">
