added timetable and periods

--- a/App/Views/Admin/Dashboard/Period/edit.html
+++ b/App/Views/Admin/Dashboard/Period/edit.html
@@ -2,61 +2,22 @@
 block body %}
 <h4>Periods</h4>
 <h5>Update</h5>
-<a class="btn bg-red" href="/admin/deletePeriod/{{periods.id}}">Delete</a>
+<a class="btn bg-red" href="/admin/deletePeriod/{{period.id}}">Delete</a>
 <br />
 <br />
 <h4>New Period</h4>
-<form action="/admin/createPeriod" method="post">
+<form action="/admin/updatePeriod" method="post">
     <h5>Timing</h5>
+    <input type="hidden" name="id" value="{{period.id}}">
     <div class="input-field">
         <label for="fromTime">From</label>
-        <input type="time" id="appt" name="fromTime" min="09:00" max="18:00" required>
+        <input type="time" id="appt" value="{{period.fromTime}}" name="fromTime" min="09:00" max="18:00" required>
     </div>
     <div class="input-field">
         <label for="toTime">To</label>
-        <input type="time" id="appt" name="toTime" min="09:00" max="18:00" required>
+        <input type="time" id="appt" value="{{period.toTime}}" name="toTime" min="09:00" max="18:00" required>
     </div>
-    <h5>Day</h5>
-    <div class="input-field col s12">
-        <select name="day" class="browser-default" id="hod">
-            {% for day in days %}
-            <option {% if periods.day==day %}selected="selected" {% endif %} value="{{day}}">{{day}}</option>
-            {% endfor %}
-        </select>
-        <br />
-    </div>
-    <h5>Subject</h5>
-    <div class="input-field col s12">
-        <select name="subject" class="browser-default" id="hod">
-            {% for subject in subjects %}
-            <option {% if periods.subjectID==subject.id %}selected="selected" {% endif %} value="{{subject.id}}">
-                {{subject.name}}</option>
-            {% endfor %}
-        </select>
-        <br />
-    </div>
-
-    <h5>Class id</h5>
-    <div class="input-field col s12">
-        <select name="class" class="browser-default" id="hod">
-            {% for class in classes %}
-            <option {% if class.id==periods.classID %}selected="selected" {% endif %} value="{{class.id}}">{{class.id}}
-            </option>
-            {% endfor %}
-        </select>
-        <br />
-    </div>
-    <h5>Teacher</h5>
-    <div class="input-field col s12">
-        <select name="teacher" class="browser-default" id="hod">
-            {% for teacher in teachers %}
-            <option {% if teacher.userID==periods.teacherID %}selected="selected" {% endif %}
-                value="{{teacher.userID}}">
-                {{teacher.name}}</option>
-            {% endfor %}
-        </select>
-        <br />
-    </div>
+    <button class="btn bg-orange lighten-1 z-depth-0">Update</button>
 
 </form>
 <br />
