--- a/App/Views/Admin/Dashboard/index.html
+++ b/App/Views/Admin/Dashboard/index.html
@@ -12,6 +12,7 @@ block body %}
 <a href="/admin/student">Student Management</a> <br /><br />
 <a href="/admin/subject">Subject Management</a> <br /><br />
 <a href="/admin/period">Periods Management</a> <br /><br />
+<a href="/admin/timeTable">Time Table Management</a> <br /><br />
 <a href="/logout">Logout</a>
 
 {% endblock %}
