added timetable by class

--- a/App/Views/Admin/Dashboard/TimeTable/index.html
+++ b/App/Views/Admin/Dashboard/TimeTable/index.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %} {% block title %}Admin | TimeTable{% endblock %} {%
 block body %}
 <h4>TimeTable</h4>
+<a class="btn bg-red" href="/admin/showTimeTable">Show time table by class</a> <br>
 {% for timeTable in timeTables%} Timing
 {{timeTable.fromTime}}-{{timeTable.toTime}} <br />
 Day - {{timeTable.day}} <br />
@@ -13,7 +14,7 @@ Teacher - {{timeTable.teacherID}} <br />
 {% endfor %}
 
 <h4>New TimeTable</h4>
-<!-- <form action="/admin/createTimeTable" method="post">
+<form action="/admin/createTimeTable" method="post">
   <h5>Timing</h5>
 
   <h5>Period</h5>
@@ -64,42 +65,6 @@ Teacher - {{timeTable.teacherID}} <br />
     <br />
   </div>
 
-  <button class="btn bg-orange lighten-1 z-depth-0">Create</button>
-</form> -->
-
-<form action="/admin/timetableForClass">
-  <h5>Class</h5>
-  <div class="input-field col s12">
-    <select name="class" class="browser-default" id="hod">
-      {% for class in classes %}
-      <option value="{{class.id}}">{{class.name}}</option>
-      {% endfor %}
-    </select>
-    <br />
-  </div>
-
-  <table>
-    <thead>
-      <tr>
-        <th>Day/Period</th>
-        {% for period in periods %}
-        <th data-value="{{period.id}}">
-          {{period.fromTime}}-{{period.toTime}}
-        </th>
-        {% endfor %}
-      </tr>
-    </thead>
-    <tbody>
-      {% for day in days %}
-      <tr data-value="{{day}}">
-        <td><b>{{day}}</b></td>
-        {% for period in periods %}
-        <td data-value="{{period.id}}-{{day}}" contenteditable="true">NA</td>
-        {% endfor %}
-      </tr>
-      {% endfor %}
-    </tbody>
-  </table>
   <button class="btn bg-orange lighten-1 z-depth-0">Create</button>
 </form>
 <br />
