added pubic accessible media directory

--- a/App/Views/base.html
+++ b/App/Views/base.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/css/materialize.min.css" />
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Teko:wght@300;400;500;600;700&display=swap" />
-  <link rel="stylesheet" href="styles/style.css" />
+  <link rel="stylesheet" href="/media/styles/style.css" />
   <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css" />
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
@@ -20,7 +20,9 @@
 </head>
 
 <body>
-  <div class="container">{% block body %} {% endblock %}</div>
+  <div class="container">{% block body %} {% endblock %}
+
+  </div>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/js/materialize.min.js"></script>
   <script type="text/javascript">
     var successMsg = {{ SUCCESS_MESSAGE | json_encode() | raw }}
